--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,6 @@
 
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif !important;
   background-color: #f9fafb !important; // Removed extra semicolon
 }
