--- a/src/_stock_management/assets/scss/Dashboard.scss
+++ b/src/_stock_management/assets/scss/Dashboard.scss
@@ -40,7 +40,7 @@ $btn-border-radius: 8px;
 // 3. General & Component Styles
 // ----------------------------------------
 .card {
-  background-color: $white;
+  background-color:  #111827;
   border-radius: $card-border-radius !important;
   padding: $card-padding;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
@@ -120,7 +120,7 @@ table {
     font-size: 14px;
     color: #799AB9;
   }
-  
+
   tbody tr:last-child td {
     border-bottom: none;
   }
